fix(radio): alignment & container height

--- a/packages/ods/src/components/radio/src/components/ods-radio/ods-radio.scss
+++ b/packages/ods/src/components/radio/src/components/ods-radio/ods-radio.scss
@@ -1,6 +1,10 @@
 @use '../../../../../style/radio';
 
 .ods-radio {
+  display: inline-flex;
+  width: inherit;
+  height: inherit;
+
   &__radio {
     @include radio.ods-radio();
   }
